# sdp_ws2013_pcl

./: .directory  .gitignore  README.md  to_do.txt
Diagrams/Sequence Diagrams/: UML-Sequence Diagrams(EA project file).eap
diagrams/agent_diagrams/: agents_diagram.dia
diagrams/class_diagrams/: class_diagram.asta
doc/: Presentation PCL Agentification.pptx  apcl_presentation.pptx  apcl_presentation_final.ppt  apcl_presentation_final.pptx  sdp_pcl_report.tex
doc/presentation/: script_for_presentation.txt
downsampling/: voxel_grid.cpp
examples/downsampling/: CMakeLists.txt
examples/downsampling/src/: voxel_grid.cpp
examples/kinect_io/: CMakeLists.txt
examples/kinect_io/src/: kinect_test.cpp
examples/kinect_motor/src/: kinect_test.cpp
examples/kinect_snapshot/: CMakeLists.txt
examples/kinect_snapshot/src/: advanced_snapshot.cpp
examples/passtrough_filter/src/: passthrough.cpp
examples/pcd_read/: CMakeLists.txt
examples/pcd_write/: CMakeLists.txt
examples/pclViewer/: CMakeLists.txt  pclViewer
examples/pcl_viewer/: CMakeLists.txt
independent_of_ros/examples/downsampling/src/: voxel_grid.cpp
independent_of_ros/examples/kinect_io/: CMakeLists.txt
independent_of_ros/examples/kinect_io/src/: kinect_test.cpp
independent_of_ros/examples/kinect_motor/: CMakeLists.txt
independent_of_ros/examples/pcd_write/: CMakeLists.txt
independent_of_ros/examples/pcl_viewer/src/: pclViewer.cpp
independent_of_ros/pcl_demo/src/: filters.cpp  filters.h  open_ni_viewer.h  pcl_tester.cpp
passThroughFIlter/: passthrough.cpp
passThroughFilter/: .cproject  .project  CMakeLists.txt  Makefile  cmake_install.cmake  passthrough
pclAgent/: .cproject  .project  CMakeLists.txt  Makefile  cmake_install.cmake  pclAgent
pclAgent/src/: AgentViewer.cpp  AgentViewer.h  Filters.cpp  Filters.h  PCDReadWrite.cpp  PCDReadWrite.h  PCDSimpleIO.cpp  PCDSimpleIO.h  pclAgent.cpp
pclViewer/: CMakeLists.txt  pclViewer  pclViewer.cpp
pcl_agent/: CMakeLists.txt  CMakeLists.txt~  package.xml
pcl_agent/src/: cloud_viewer.cpp  cloud_viewer.h  filters.cpp  filters.h  pcd_simple_io.cpp  pcd_simple_io.h  pcl_tester.cpp  pcl_tester.cpp~
pcl_demo/src/: pcl_tester.cpp
pcl_ros_agent/: CMakeLists.txt  package.xml
pcl_ros_agent/pcl_agent/: CMakeLists.txt  package.xml
pcl_ros_groovy_agent/pcl_agent/src/: pcl_tester.cpp
ros_agents/pcl_agents/: CMakeLists.txt  package.xml  pcl_agents.launch
ros_agents/pcl_agents/launch/: pcl_agents.launch
ros_agents/pcl_file_reader/: CMakeLists.txt  README.md  package.xml
ros_agents/pcl_file_reader/cfg/: file_reader.cfg  param.cfg
ros_agents/pcl_file_reader/include/: pcd_simple_io.h
ros_agents/pcl_file_reader/launch/: load_cloud.launch  pcl_file_reader.launch  test_pcl_file_reader.launch
ros_agents/pcl_file_reader/nodes/: pcl_file_reader.cpp
ros_agents/pcl_file_reader/src/: pcd_simple_io.cpp
ros_agents/pcl_filters/: CMakeLists.txt  package.xml
ros_agents/pcl_filters/cfg/: downsampling_configure.cfg  passthrough_configure.cfg  radiusoutlierremoval_configure.cfg  statisticaloutlierremoval_configure.cfg
ros_agents/pcl_filters/include/: downsampling_filter.h  filters_interface.h  passthrough_filter.h  radiusoutlierremoval_filter.h  statisticaloutlierremoval_filter.h
ros_agents/pcl_filters/launch/: downsampling_agent.launch  passthrough_agent.launch  pcl_filters.launch  radiusoutlierremoval_agent.launch  statisticaloutlierremoval_agent.launch
ros_agents/pcl_filters/nodes/: downsampling_agent.cpp  passthrough_agent.cpp  passthrough_ros.cpp  radiusoutlierremoval_agent.cpp  statisticaloutlierremoval_agent.cpp
ros_agents/pcl_filters/src/: downsampling_filter.cpp  passthrough_filter.cpp  radiusoutlierremoval_filter.cpp  statisticaloutlierremoval_filter.cpp
ros_agents/pcl_kinect/: CMakeLists.txt  package.xml
ros_agents/pcl_kinect/cfg/: kinect.cfg  kinect_configure.cfg
ros_agents/pcl_kinect/cfg/cpp/pcl_kinect/: kinectConfig.h
ros_agents/pcl_kinect/docs/: KinectConfig.wikidoc  kinectConfig.dox  rosConfig-usage.dox
ros_agents/pcl_kinect/include/: kinect_reader.h
ros_agents/pcl_kinect/launch/: pcl_kinect.launch
ros_agents/pcl_kinect/nodes/: pcl_kinect.cpp
ros_agents/pcl_kinect/src/: kinect_reader.cpp
ros_agents/pcl_kinect/src/pcl_kinect/cfg/: KinectConfig.py
ros_agents/pcl_viewer/: CMakeLists.txt  package.xml
ros_agents/pcl_viewer/cfg/: viewer.cfg  viewer_configure.cfg
ros_agents/pcl_viewer/cfg/cpp/pcl_viewer/: ViewerConfig.h
ros_agents/pcl_viewer/docs/: ViewerConfig-usage.dox  ViewerConfig.dox  ViewerConfig.wikidoc
ros_agents/pcl_viewer/include/: displayer.h
ros_agents/pcl_viewer/launch/: pcl_viewer.launch
ros_agents/pcl_viewer/nodes/: pcl_viewer.cpp  pcl_viewer_reconfigure.cpp
ros_agents/pcl_viewer/src/: displayer.cpp
ros_agents/pcl_viewer/src/pcl_viewer/cfg/: ViewerConfig.py
ros_examples/dynamic_tutorials/: CMakeLists.txt  package.xml
ros_examples/dynamic_tutorials/cfg/: MyStuff.cfg  Tutorials.cfg
ros_examples/dynamic_tutorials/cfg/cpp/dynamic_tutorials/: MyStuffConfig.h
ros_examples/dynamic_tutorials/docs/: MyStuffConfig-usage.dox  MyStuffConfig.dox  MyStuffConfig.wikidoc
ros_examples/dynamic_tutorials/launch /: dynamic_tutorials.launch
ros_examples/dynamic_tutorials/src/: dynamic_reconfigure_node.cpp  server.cpp
ros_examples/dynamic_tutorials/src/dynamic_tutorials/cfg/: MyStuffConfig.py
ros_examples/pcl_ros_demo/: CMakeLists.txt  package.xml
ros_examples/pcl_ros_demo/src/: pcl_tester.cpp
