<package>
  <name>pcl_agent</name>
  <version>0.0.1</version>
  <description>
  This package provides foo capability.
  </description>
  <maintainer email="ivana@willowgarage.com">Ivana Bildbotz</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
	
  <build_depend>roscpp</build_depend>

</package>