<?xml version="1.0"?>
<package>
	<name>pcl_filters</name>
	<version>0.0.0</version>
	<description>The pcl_filters package</description>
	<maintainer email="shehzad.ahmed@h-brs.de">shehzad ahmed</maintainer>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>rospy</build_depend>
	<run_depend>dynamic_reconfigure</run_depend>
	<run_depend>rospy</run_depend>
</package>
