<?xml version="1.0"?>
<package>
  <name>pcl_viewer</name>
  <version>0.0.0</version>
  <description>The pcl_viewer package</description>

  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>
	<maintainer email="iuri.araujo@smail.inf.h-brs.de">Iuri Andrade</maintainer>
	<maintainer email="oscar.lima@smail.inf.h-brs.de">Oscar Lima</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
