<package>
  <name>pcl_ros_demo</name>
  <version>0.0.1</version>
  <description>
  This package provides foo capability.
  </description>
  <maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>
  <maintainer email="shehzi001@gmail.com">Shehzad Ahmed</maintainer>
  <maintainer email="iuri.araujo@smail.inf.h-brs.de">Iuri Andrade</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
	
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

</package>
